--- a/gb/nf4514_2.md
+++ b/gb/nf4514_2.md
@@ -1,4 +1,17 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>大头条集锦</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"></a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"></a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"></a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"></a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037557.md#1" target="_blank">惩罚中共 美共和党领袖制定问责8大计划</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037557.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12935171-kevin-mccarthy-1200x798-150x120.jpeg" align ="left"></a>美国国会众议院共和党领袖凯文·麦卡锡（Kevin McCarthy）日前公布了“向中共问责”（Holding China Accountable）的8大支柱计划，包括要求解密疫情相关情报，提高透明度，以及对参与隐瞒疫情者实施签证限制和经济制裁。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月22日 4:00 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037513.md#1" target="_blank">调查报告：关于中共核能梦 我们需知什么</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037513.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13037520-000_W33LJ-150x120.jpg" align ="left"></a>2021年6月16日，台山核电站被曝存在“迫在眉睫的核辐射威胁”。中共官方虽否认了任何泄漏问题，但此次“事故疑云”将中共投资的核电站再次推向了公共的视野。美国天主教大学机械工程系前系主任聂森指出，中共有一个核能梦。核能对于中共而言，主要是为政治服务，而不是为了百姓的民生。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月22日 3:38 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037303.md#1" target="_blank">史上首次 美众议员推法案要求冻结中共资产</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037303.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13037306-GettyImages-1232295787-150x120.jpg" align ="left"></a>美国当地时间6月19日，联邦众议员安·瓦格纳（Ann Wagner）表示，中共试图隐瞒中共病毒（COVID-19）起源的作法，违反了其在2005年签署的一份有约束力的国际条约，该条约将允许美国对中共实施制裁，并没收和冻结中共在美国的资产，用来补偿大瘟疫的受害者。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月22日 12:04 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037165.md#1" target="_blank">CGTN编辑爆习访美出状况 编辑室恐慌叫骂</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037165.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13029313-UK-CGTN-01@1200x1200-150x120.jpeg" align ="left"></a>当中共央视国际部（环球电视网，CGTN）的直播画面上出现少数族裔和法轮功学员的和平抗议时，“新闻编辑室里一片恐慌，所有的老板都挤在一起大喊大叫，”一位曾在该机构工作的编辑说。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 10:26 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13036526.md#1" target="_blank">【疫情6.21】台新病例不足百 三级警戒后首次</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13036526.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13036549-1-150x120.jpeg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东夏令时周一（6月21日）上午4:00，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过1.78亿（178,491,809）例，死亡人数超过386万（3,866,201）人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 7:25 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13036398.md#1" target="_blank">分析：中共战狼外交官为何屡屡出丑？</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13036398.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12945789-Untitled-collage-1-1--150x120.jpeg" align ="left"></a>美国资深政治记者彼得·马丁（Peter Martin）撰文分析，中共的“战狼”外交官，为何屡屡在国际上出丑，损害国家形象。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 4:35 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13036460.md#1" target="_blank">消息：香港苹果日报将关闭 壹周刊尚未确定</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13036460.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13028969-ttl7dayNkJ________________________________________-150x120.jpg" align ="left"></a>香港《苹果日报》内部消息人士今天（6月21日）说，资金不足加上及《港区国安法》的压力，《苹果日报》和动新闻“肯定要关闭”，《壹周刊》则尚未确定。公司董事会已提前至今日召开，可能宣布停刊时间。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 4:14 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/20/n13035206.md#1" target="_blank">林辉：中共三名高官叛逃带来的重创</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/20/n13035206.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13024797-2-beijing-GettyImages-172631987-150x120.jpg" align ="left"></a>借着中共自爆其丑，笔者也凑个热闹，说说曾经背叛中共的三名高官带给中共怎样的重创。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 12:34 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/11/n13015930.md#1" target="_blank">【思想领袖】希斯：取消文化兴起令人生畏</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/11/n13015930.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13036060-9d21837b2185922a786cdc2ab0d061d2-150x120.jpg" align ="left"></a>法案通过没有意义，这会是一个一边倒的委员会，对立的委员会要调查1月6日当天的事件, 最终将成为针对川普支持者和保守派的“猎巫”行动，这是攻击我们的言论自由和立法程序。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 12:27 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/20/n13034634.md#1" target="_blank">山东胶州 一日至少16法轮功学员遭绑架</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/20/n13034634.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13037127-1f0e1749cd0293fca2ff6d9bb5c33801-150x120.jpg" align ="left"></a>6月2日，山东胶州市公安局出动百名警察大肆绑架当地法轮功学员。现在确定，宋桂芹、高秀娥等至少16名法轮功学员被绑架。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 11:26 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/20/n13035544.md#1" target="_blank">【一线采访】东莞麻涌封镇 当地大学现疫情</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/20/n13035544.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13035594-3e7ac0c29ac4e0b20f32a636be330a8c-150x120.jpg" align ="left"></a>广东疫情越演越烈，同天广州、深圳、东莞、佛山四城市现确诊病例。而目前东莞的麻涌镇已封闭管理，麻涌镇的中山大学新华学院有两名学生确诊，该校2千名师生连续两天连夜核酸检测，但官方涉嫌瞒报，未完全公布实情。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 11:24 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13035660.md#1" target="_blank">【中共党史】中共配合苏联肢解中国（下）</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13035660.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13022879-c3618059d5321027fe22571d7c82bc19@1200x1200-600x400-1-150x120.jpeg" align ="left"></a>上文我们看了中共是如何主动配合苏联策动蒙古独立，本文我们将看看它的存在如何被苏联利用来勒索中国。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 10:33 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13035671.md#1" target="_blank">五香港青年驾船到台湾 美政府介入后抵美</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13035671.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13011419-UK-Debate-05@1200x1200-150x120.png" align ="left"></a>五名香港青年男子乘坐充气快艇穿越南海的广阔水域，抵达台湾；在美国国务院介入后，这五人最终都前往美国寻求庇护。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 9:49 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/20/n13035369.md#1" target="_blank">苹果事件挑战香港新闻自由 各界高度关注</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/20/n13035369.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13035373-DSC_6211-01.jpeg-150x120.jpg" align ="left"></a>苹果事件激发各界人士高度关注，香港新闻自由面临前所未有的挑战，动摇香港金融中心地位。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 5:22 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/20/n13035220.md#1" target="_blank">美国安顾问：病毒溯源 中共面临两个选择</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/20/n13035220.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/3-20-150x120.jpg" align ="left"></a>美国国家安全顾问杰克·沙利文（Jake Sullivan）周日（6月20日）警告说，若中共不允许真正调查，将面临国际孤立。他还表示，美国目前还不会发出最后通牒，但如果中共最终拒绝履行国际义务，美国将不得不考虑回应。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 2:39 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/20/n13034992.md#1" target="_blank">拉闸限电 大陆缺电潮蔓延至华中华北</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/20/n13034992.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/03/GettyImages-503967276_copy@1200x1200-1-150x120.jpg" align ="left"></a>大陆缺电情况正从南方向华中、华北蔓延，多地发通知说供电缺口扩大，一些地方再现2020年年末的拉闸限电情况。中共发改委近日回应称有工业、气候、煤炭等原因，但回避了去年以来禁止进口澳洲煤炭，以及敏感的5G耗电问题。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 2:14 AM							</td></tr>
@@ -22,20 +35,5 @@
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/19/n13033424.md#1" target="_blank">美赠250万剂莫德纳疫苗 台湾朝野感谢</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/19/n13033424.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13033441-1024x768_986762218297-150x120.jpg" align ="left"></a>美国在台协会（AIT）晚间透过脸书表示，明天（20日）将有250万莫德纳疫苗抵台，此批疫苗由美国政府捐助，数量包含了6月6日美国参议员达克沃丝、苏利文及昆斯访台所宣布的75万剂，再加上额外捐赠的175万剂。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 11:42 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/19/n13032817.md#1" target="_blank">【疫情6.19】COVID-19恐导致脑组织流失</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/19/n13032817.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/03/b168d1d3e68a6fc8526e54216a660269-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东夏令时周六（6月19日）清晨4:15，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过1.77亿（177,831,575）例，死亡人数超过385万（3,851,667）人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 5:29 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13032063.md#1" target="_blank">亚马逊Prime Day即将开锣 有哪些最优惠折扣</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13032063.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/07/Tu1_shutterstock_1438155713-150x120.jpg" align ="left"></a>亚马逊的Prime Day（黄金日），通常是其一年中最大的折扣促销活动。而2021年的亚马逊Prime Day的折扣规模可能会比以往更大。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 2:47 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/19/n13032381.md#1" target="_blank">美法院维持FCC采购补贴禁令 华为败诉</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/19/n13032381.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/600x400-v1-150x120.jpg" align ="left"></a>美国联邦上诉法院周五（6月18日）驳回了中国科技巨头华为对美国联邦通信委员会（FCC）的诉讼，这也意味法院支持FCC称华为构成国安威胁的判定。。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 11:49 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/19/n13032119.md#1" target="_blank">沈舟：卡尔文森号航母全新舰队抵夏威夷</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/19/n13032119.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13032130-51252999437_b88e466a82_k-150x120.jpg" align ="left"></a>西方各国关注台海局势，中共却偏要摆出挑衅架势，6月15日忽然派出大批军机骚扰台海。美军应该早料到中共可能的反应，也进行了有针对性的部署。里根号航母（CVN76）6月14日就进入南海，展示在恶劣天气下继续舰载机起降训练；美利坚号两栖舰队与日本海上自卫队也在菲律宾海联合演练；美军侦察机也不断在中国沿海侦察。
-
-美军的另一艘航母卡尔文森号（CVN 70）6月1.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 10:30 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13031878.md#1" target="_blank">【首播】前军报记者：经历六四 认清党军</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13031878.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13031915-ttl7dayQSs_b901fa117abc79a6-150x120.jpg" align ="left"></a>美东时间周五（18日）晚9:30，新唐人《热点互动》节目主持人方菲女士专访一位六四亲历者，前《解放军报》记者江林。新唐人《热点互动》频道进行首播。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 9:14 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13030988.md#1" target="_blank">临出狱 江苏法轮功学员潘绪军被监狱害死</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13030988.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13031018-93de97fceff7359945744fe930d814a2-150x120.jpg" align ="left"></a>江苏省徐州市沛县教师、法轮功学员潘绪军于2016年被沛县法院枉判5年半后，被劫入江苏省洪泽湖监狱，冤狱期满的前10天，于2020年11月8日被迫害致死，终年55岁。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 7:00 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13031931.md#1" target="_blank">热浪席卷美西 创历史高温 影响四千万居民</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13031931.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2013/06/1306282003462639-150x120.jpg" align ="left"></a>今年夏天的第一场大热浪已经席卷美国西部，影响到西部四千多万居民。至少有五个气象站，包括盐湖城和加州的棕榈泉的温度在本周达到了历史最高，虽然今年夏季才开始不久。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 5:37 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13031701.md#1" target="_blank">德媒重磅长文详解：中共对西方的可怕渗透</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13031701.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12866363-GettyImages-1232057117-150x120.jpg" align ="left"></a>德国《世界报》近日发表重磅长文，详解中共对西方媒体的可怕渗透。文章开篇即称，中共党魁习近平的野心是把中（共）国伪装成一个进步、民主的国家。至于侵犯人权的恶行，显然是中共想要极力掩盖和涂抹的，为此中共在全球招募了许多“助手”，在德国也不例外。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 1:38 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13031730.md#1" target="_blank">【珍言真语】钱志健：袭苹果日报 毁港核心价值</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13031730.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13031951-Untitled-150x120.jpg" align ="left"></a>香港警方国安处携过百警员6月17日突袭《苹果日报》大楼，拘捕5名壹传媒高层，立即引发国际震惊与反弹。美国政府及议员、英国外交部、欧盟发言人、台湾民进党和外交部、国际组织，及香港民主党、记者协会、媒体、香港市民等均强烈谴责。中共被指用《港区国安法》迫害异议人士，扼杀香港新闻自由的核心价值，损害香港的国际信誉，越来越离谱。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 1:38 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/9/n13010897.md#1" target="_blank">【忽必烈传】兴建元大都 尊儒崇佛建太庙</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/9/n13010897.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12980446-35c4b9556e32083c28b652e09d051e6a-150x120.jpg" align ="left"></a>由于忽必烈所辖汉地范围逐渐扩大，其统治中心也转移到中原地区，如果继续将和林作为帝国的都城已经不合适，因此，在仿照中原王朝建立年号和国号前后，忽必烈将都城从和林迁到了汉地。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 1:35 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13031625.md#1" target="_blank">【一线采访】深圳机场人员确诊 下十围封村</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13031625.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13031638-a9da89a3df5a79769a125a3e386e7fac-150x120.jpg" align ="left"></a>深圳市周四（17日）出现4宗中共病毒确诊病例，以及一宗无症状感染者个案。其中一名确诊机场女服务员居住的下十围村已经实施封区措施，只进不出。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 12:36 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13030262.md#1" target="_blank">【中共党史】中共配合苏联肢解中国（上）</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13030262.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13022879-c3618059d5321027fe22571d7c82bc19@1200x1200-600x400-1-150x120.jpeg" align ="left"></a>中共在1921年建党以后，直至1949年夺取全国政权这28年内所做的每一件事，都可以概括为：“为了夺权，不惜分裂国家”。分裂国家是手段，夺取政权是目的。它通过分裂国家，严重地削弱了当时的中央政府，在中央政府被弱化后，就达到自己夺权的目的。可耻的是，它为了达到弱化中央政府，甚至愿意协助苏联来肢解中国。本文以蒙古为例，说明它是如何配合苏联肢解中国。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月18日 11:42 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13031476.md#1" target="_blank">拜登联欧抗共会普京 分析：北京始料不及</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13031476.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13026462-GettyImages-1233485296-150x120.jpg" align ="left"></a>美国总统拜登在第一次出国旅行中，会见了数十个美国盟友和主要对手之一的俄罗斯，分析认为，这导致拜登可以集中精力应对中共和习近平。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月18日 10:52 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13031350.md#1" target="_blank">NASA科学家隐瞒参与千人计划 获刑30天</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13031350.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13031471-GettyImages-104324416-150x120.jpg" align ="left"></a>美国国家航空航天局（NASA）的资深科学家梅亚?梅亚潘（Meyya Meyyappan）因向联邦调查局（FBI）、航空航天局监察长办公室（NASA OIG）和纽约南区检察官（USAO）做出虚假陈述，本周被判处30天监禁和10万美元罚款。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月18日 10:31 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13030922.md#1" target="_blank">【新闻大家谈】专访前核专家：亲见恐怖泄漏</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13030922.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13031083-66f358ad1ca6a255558514f60f0b9b48-150x120.jpg" align ="left"></a>专访前核物理专家：中国原子能研究院的恐怖泄漏，看守竟毫不知情；同事窃走美国中子弹技术，民用核电站的军用化；亲眼目睹中共违规向巴基斯坦输送核技术；......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月18日 9:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nf4514.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nf4514_3.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/wtyoso3338/djy/blob/master/gb/nf4514_2.md#1<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/nf4514_2.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wtyoso3338/djy/blob/master/gb/nf4514_2.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514_2.htm">https://www.epochtimes.com/gb/nf4514_2.htm</a>    （国内需<a href="https://github.com/wtyoso3338/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
